--- a/config/src/main/resources/application.properties
+++ b/config/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.application.name=config-server
+server.port=8888
 
+# URI of GIT repo containing properties
+spring.cloud.config.server.git.uri=https://github.com/ramana5130/micro-services-spring-cloud-config
+
+# path to properties from root of repo
+spring.cloud.config.server.git.searchPaths: configuration
+
+logging.level.org.springframework.web=INFO
